[package]
name = "mosaic"
version = "0.1.0"
authors = ["rep-nop <repnop@outlook.com>"]
description = "A crate for easily drawing tiles from a tilesheet with `ggez`."
repository = "https://github.com/rep-nop/mosaic"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tile", "ggez", "tilesheet"]

[dependencies]
ggez = "0.4.3"
mint = "0.5.0"
